--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css">
-		<title>分段加载示例</title>
+		<title>刘备爬墙</title>
 		<style>
 			#stage2 {
 				display: none;
@@ -48,7 +48,7 @@
 			<div class="container" id="container">
 				<aside class="left-bar" id="leftBar">
 					<div class="title">
-						<p>自己测试</p>
+						<p>测试站点</p>
 					</div>
 					<nav class="nav">
 						<!-- <div class="item active"><a href=""><i class="iconfont icon-daohang2"></i>飞叶导航http://ifeiye.gitee.io/dh/</a><i class="line"></i></div> -->
