--- a/index.html
+++ b/index.html
@@ -2036,8 +2036,8 @@
 					errorCount = 0; // 如果密码正确，重置错误次数
 				} else {
 					errorCount++; // 如果密码错误，增加错误次数
-					if (errorCount == 3) { // 如果错误次数为3次
-						alert('密码为 1024 '); // 显示提示词"abc"
+					if (errorCount == 6) { // 如果错误次数为3次
+						alert('密码为 1024 '); // 显示提示词"1024"
 					} else {
 						alert('密码错误，请重新输入！');
 					}
