--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
 								<div><i class="iconfont icon-zuijinchangyong"></i>常用</div>
 							</div>
 							<div>
+								<a target="_blank" href="https://chottie.com/blog/">
+									<div class="item">
+										<div class="no-logo">最新秀人套图</div>
+									</div>
+								</a>
 								<a target="_blank" href="https://sk.baa28.com/seku/">
 									<div class="item">
 										<div class="no-logo">色库-视频截图+纯下载</div>
@@ -1272,6 +1277,30 @@
 								<div><i class="iconfont icon-zuijinchangyong"></i>图片</div>
 							</div>
 							<div>
+								<!-- ************----------************ -->
+								<div class="item4">
+									<div class="no-logo">chottie-最新秀人套图</div>
+								</div>
+								<a target="_blank" href="https://chottie.com/blog/">
+									<div class="item">
+										<div class="no-logo">chottie-地址-1</div>
+									</div>
+								</a>
+								<a target="_blank" href="https://chottie.org/blog/">
+									<div class="item">
+										<div class="no-logo">chottie-地址-2</div>
+									</div>
+								</a>
+								<a target="_blank" href="https://chottie.net/blog/">
+									<div class="item">
+										<div class="no-logo">chottie-地址-3</div>
+									</div>
+								</a>
+								<a target="_blank" href="https://mtguan.net/">
+									<div class="item">
+										<div class="no-logo">chottie-发布页-1</div>
+									</div>
+								</a>
 								<!-- ************----------************ -->
 								<div class="item4">
 									<div class="no-logo">其他图片</div>
