--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
 										<div class="no-logo">最新秀人套图</div>
 									</div>
 								</a>
+								<a target="_blank" href="http://thzf.cc/forum.php">
+									<div class="item">
+										<div class="no-logo">桃花族</div>
+									</div>
+								</a>
 								<a target="_blank" href="https://sk.baa28.com/seku/">
 									<div class="item">
 										<div class="no-logo">色库-视频截图+纯下载</div>
