--- a/index.html
+++ b/index.html
@@ -1005,26 +1005,50 @@
 							<a href="#" name="9"></a>
 							<div class="sub-category">
 								<div><i class="iconfont icon-zuijinchangyong"></i>2048</div>
+								<div>更新于2024年10月11日</div>
+								<div>2048-邮件地址 ： hjd2048@gmail.com</div>
 							</div>
 							<div>
 
-								<a target="_blank" href="https://imessege.com/2048/">
+								<a target="_blank" href="https://xy.pfhwy.com/">
 									<div class="item1">
-										<div class="no-logo">2048 -地址1</div>
+										<div class="no-logo">2048 -发布地址-1</div>
 									</div>
 								</a>
-								<a target="_blank" href="https://s3366.com/2048/">
+								<a target="_blank" href="https://dh.pfhwy.com/">
 									<div class="item">
-										<div class="no-logo">2048 -地址2</div>
+										<div class="no-logo">2048 -发布地址-2</div>
+									</div>
+								</a>
+								<a target="_blank" href="https://lt.fpbtmc.cn/2048/">
+									<div class="item">
+										<div class="no-logo">2048 -发布地址-3</div>
+									</div>
+								</a>
+								<a target="_blank" href="https://fby.qetiza.com/">
+									<div class="item">
+										<div class="no-logo">2048 -发布地址-4</div>
+									</div>
+								</a>
+								
+								<a target="_blank" href="https://3etg.8nxtvcox9.com/2048/">
+									<div class="item">
+										<div class="no-logo">2048 -地址- 1</div>
+									</div>
+								</a>
+								<a target="_blank" href="https://33lbi.296w8v8iy.com/2048/">
+									<div class="item">
+										<div class="no-logo">2048 -地址- 2</div>
 									</div>
 								</a>
 
-								<a target="_blank" href="https://tnxxw.com/">
+								
+								<a target="_blank" href="http://hjd2048.com/">
 									<div class="item">
 										<div class="no-logo">2048核基地-永久地址-翻</div>
 									</div>
 								</a>
-								<a target="_blank" href="http://hjd2048.com/">
+								<a target="_blank" href="https://tnxxw.com/">
 									<div class="item">
 										<div class="no-logo">2048核基地-永久地址-翻</div>
 									</div>
