--- a/index.html
+++ b/index.html
@@ -253,12 +253,18 @@
 							<a href="#" name="2"></a>
 							<div class="sub-category">
 								<div><i class="iconfont icon-zuijinchangyong"></i>98tang 98堂</div>
+								<div>2024年12月22日</div>
 							</div>
 							
 							<div>
 								<a target="_blank" href="https://m7a7.z24mk.com/">
 									<div class="item">
 										<div class="no-logo">98堂-免翻地址-1</div>
+									</div>
+								</a>
+								<a target="_blank" href="https://799.u8dnv.net/">
+									<div class="item">
+										<div class="no-logo">98堂-免翻地址-21</div>
 									</div>
 								</a>
 								<a target="_blank" href="https://98tang.com/">
